force-app/main/default/objects/WEX_GPS_Position__c/WEX_GPS_Position__c.object-meta.xml
<CustomObject>
    <label>WEX GPS Position</label>
    <nameField>
        <displayFormat>GPS-{000000}</displayFormat>
        <label>GPS Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WEX GPS Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>