force-app/main/default/objects/WEX_GPS_Position__c/fields/Crew__c.field-meta.xml
<CustomField>
    <fullName>Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schema repair v3 2026-04-30</description>
    <label>Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>WEX GPS Positions</relationshipLabel>
    <relationshipName>WEX_GPS_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>