force-app/main/default/objects/WEX_GPS_Position__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schema repair v3 2026-04-30</description>
    <label>Driver</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>WEX GPS Positions (Driver)</relationshipLabel>
    <relationshipName>WEX_GPS_Positions_Driver</relationshipName>
    <type>Lookup</type>
</CustomField>