force-app/main/default/objects/WEX_GPS_Position__c/fields/Ignition_Status__c.field-meta.xml
<CustomField>
    <fullName>Ignition_Status__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Ignition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>