force-app/main/default/objects/WEX_GPS_Position__c/fields/Last_Seen_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen_DateTime__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Last Seen Date/Time</label>
    <type>DateTime</type>
</CustomField>