force-app/main/default/objects/WEX_GPS_Position__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Longitude</label>
    <precision>10</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>