force-app/main/default/objects/WEX_GPS_Position__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Source System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>