force-app/main/default/objects/WEX_GPS_Position__c/fields/Speed_MPH__c.field-meta.xml
<CustomField>
    <fullName>Speed_MPH__c</fullName>
    <description>Schema repair v3 2026-04-30</description>
    <label>Speed (MPH)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>