force-app/main/default/objects/WEX_GPS_Position__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>WEX GPS Positions</relationshipLabel>
    <relationshipName>WEX_GPS_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>